# bsp_imx6_git2

./: .autoipkg  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.PL  Makefile.am  README  README.md  TODO  applet.c  configure.ac  libmatchbox.doap  libmb.pc.in  main.c  readme-5.15.52.md  run-tests.sh  screenshot-ui.c  screenshot-ui.h  screenshot-utils.c  screenshot-utils.h  settings-daemon.c  settings-daemon.schemas
Sato/: Makefile.am
Sato/matchbox/: Makefile.am  theme-qvga.xml  theme.desktop.in  theme.xml
Sato/matchbox2/: Makefile.am  theme.desktop.in  theme.xml
appearance/: Makefile.am  appearance.glade  appearance.gladep  mb-appearance.c  mb-appearance.desktop
autoscripts/: postinst-systemd-dont-enable  postinst-systemd-enable  postinst-systemd-enable-restart  postinst-systemd-enable-start  postinst-systemd-restart  postinst-systemd-start  postrm-systemd  postrm-systemd-reload  prerm-systemd  prerm-systemd-restart
cursors/: Makefile.am
debian/: changelog  control  copyright  dh-systemd.install  init-system-helpers.install  init-system-helpers.manpages  init-system-helpers.postinst  libncursesw6.symbols  libtinfo5.symbols  libtinfo6.symbols  rules
debian/patches/: 02-debian-backspace.diff  02-debian-xterm.diff
debian/tests/: t
doc/: Makefile.am  fuser.1  killall.1  peekfd.1  prtstat.1  pslog.1  pstree.1
dotnetzip/: README
lib/Debian/Debhelper/Sequence/: systemd.pm
libmb/: Makefile.am  hash.c  mb.h  mbconfig.h.in  mbdotdesktop.c  mbdotdesktop.h  mbexp.c  mbexp.h  mbmenu.c  mbmenu.h  mbpixbuf.c  mbpixbuf.h  mbtray.c  mbtray.h  mbutil.c  mbutil.h
libtaku/: launcher-util.c  launcher-util.h  taku-icon-tile.c  taku-icon-tile.h  taku-launcher-tile.c  taku-launcher-tile.h  taku-menu-desktop.c  taku-menu.h  taku-queue-source.c  taku-queue-source.h  taku-tile.c  taku-tile.h  xutil.c  xutil.h
libtaku/inotify/: inotify-diag.c  inotify-diag.h  inotify-kernel.c  inotify-kernel.h  inotify-missing.c  inotify-missing.h  inotify-path.c  inotify-path.h  inotify-sub.c  inotify-sub.h
man-po/: Makefile.am  de.po  fr.po  hr.po  po4a.cfg  psmisc.pot  pt_BR.po  ru.po  uk.po
man8/: invoke-rc.d.rst  update-rc.d.8  update-rc.d.rst
mozilla/: certdata2pem.py
po/: bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  hr.po  hu.po  id.po  it.po  ja.po  nb.po  nl.po  pl.po  psmisc.pot  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  uk.po  update-potfiles  vi.po  zh_CN.po  zh_TW.po
script/: deb-systemd-helper  deb-systemd-invoke  dh_systemd_disable  dh_systemd_enable  dh_systemd_start  invoke-rc.d  service  update-rc.d
src/: .gitignore  base_client.c  base_client.h  client_common.c  client_common.h  comm.h  composite-engine.c  composite-engine.h  desktop.c  desktop.h  desktop_client.c  desktop_client.h  dialog_client.c  dialog_client.h  dockbar_client.c  dockbar_client.h  ewmh.c  ewmh.h  fuser.c  keys.c  keys.h  killall.c  list.c  list.h  main.c  main_client.c  main_client.h  matchbox-remote.c  mbtheme-standalone.c  mbtheme-standalone.h  mbtheme.c  mbtheme.h  misc.c  misc.h  peekfd.c  prtstat.c  pslog.c  pstree.c  select_client.c  select_client.h  (+14 more)
systemd2init/: systemd2init
t/: 001-deb-systemd-helper.t  002-deb-systemd-helper-update.t  003-deb-systemd-helper-complex.t  004-deb-systemd-helper-user.t  helpers.pm
tests/: Makefile.am  dot-desktop.c  pixbuf.c  unicode.c
testsuite/config/: unix.exp
