pngs = \
  close-button.png         \
  close-button-active.png  \
  arrow-down.png           \
  arrow-down-active.png    \
  titlebar-left-edge.png   \
  titlebar-right-edge.png  \
  titlebar-tile.png        \
  dia-left-edge.png        \
  dia-right-edge.png       \
  dia-tile.png

themesdir = $(datadir)/themes/Sato/matchbox
themes_DATA = theme.xml $(pngs)

EXTRA_DIST = theme.xml $(pngs) 

clean:
	rm -f theme.desktop
